fix spacing, y width/2

--- a/css/basics.scss
+++ b/css/basics.scss
@@ -187,8 +187,8 @@ a:hover {
   box-shadow:  1px 3px 10px 0px rgba(0,0,0,0.1);
   border-radius: 5px;
   margin: 5px;
-  padding-top: 8px;
-  padding-bottom: 11px;
+  padding-top: 1px;
+  padding-bottom: 4px;
   padding-left: 20px;
   padding-right: 20px;
   background-color: #eee;
